--- a/.github/workflows/check-update.yml
+++ b/.github/workflows/check-update.yml
@@ -48,12 +48,9 @@ jobs:
         if: steps.is-updated.outputs.updated
         run: |
           tag=$(curl -s https://api.github.com/repos/FelicianoTech/pocket-casts-desktop-app/releases/latest | jq -r '.tag_name')
-          pushd flatpak-builder-tools/node
           curl https://raw.githubusercontent.com/FelicianoTech/pocket-casts-desktop-app/${tag}/package-lock.json > package-lock.json
-          poetry install
-          poetry run flatpak-node-generator npm package-lock.json
-          popd
-          mv flatpak-builder-tools/node/generated-sources.json ./
+          flatpak-node-generator npm package-lock.json
+          rm -f package-lock.json
 
       - name: Reset Flatpak manifest to pre-modified state
         run: |
