--- a/.github/workflows/check-update.yml
+++ b/.github/workflows/check-update.yml
@@ -33,7 +33,7 @@ jobs:
         id: is-updated 
         run: |
           git status -s -uno
-          [ -z "$(git status -s -uno)" ] || echo "::set-output name=updated::true"
+          [ -z "$(git status -s -uno)" ] || echo "updated=true" >> $GITHUB_OUTPUT
 
       - name: Update Git submodules
         if: steps.is-updated.outputs.updated
